Removed mongodb, added logs and error check threshold
Please enter the commit message for your changes. Lines starting