@@ -1,10 +1,14 @@
 package com.keevosh.linkchecker.service;
 
-import com.keevosh.linkchecker.LinkCheckerOptions;
 import com.keevosh.linkchecker.dto.FileDto;
 import com.keevosh.linkchecker.dto.UrlDto;
+import com.keevosh.linkchecker.exceptions.LinkCheckerException;
+import com.keevosh.linkchecker.exceptions.ProtocolNotSupportedException;
+import com.keevosh.linkchecker.options.LinkCheckerOptions;
 
 import java.io.File;
+import java.io.IOException;
+import java.net.MalformedURLException;
 import java.net.URL;
 import java.text.SimpleDateFormat;
 import java.util.Date;
@@ -23,44 +27,44 @@ import org.json.simple.JSONValue;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-public class FileProcessorService {
-    private final static Logger log = LoggerFactory.getLogger(FileProcessorService.class);
+public final class FileProcessorService {
+    private static final Logger LOG = LoggerFactory.getLogger(FileProcessorService.class);
 
     private final SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
 
-    private static final class SINGLETON_HOLDER {
-        public final static FileProcessorService self = new FileProcessorService();
+    private static final class HOLDER {
+        public static final FileProcessorService SELF = new FileProcessorService();
     }
 
     private FileProcessorService() {}
 
     public static FileProcessorService getInstance() {
-        return SINGLETON_HOLDER.self;
+        return HOLDER.SELF;
     }
 
     public FileDto readFile(String filePath, LinkCheckerOptions options) throws ParserException {
-        SimpleMetadata tmpMetadata = SimpleMetadataFactory.getSimpleMetadata(options.fileFormat);
+        SimpleMetadata tmpMetadata = SimpleMetadataFactory.getSimpleMetadata(options.getFileFormat());
         tmpMetadata.load(filePath);
 
         if (CollectionUtils.isEmpty(tmpMetadata.getIdentifiers()) || tmpMetadata.getIdentifiers().size() > 1) {
-            log.error("Unsupported identifiers size {} for file {}. skipping", tmpMetadata.getIdentifiers().size(), filePath);
+            LOG.error("Unsupported identifiers size {} for file {}. skipping", tmpMetadata.getIdentifiers().size(), filePath);
             return null;
         }
 
-        FileDto dto = new FileDto(filePath, CollectionUtils.get(tmpMetadata.getIdentifiers(), 0).toString(), options.fileFormat);
+        FileDto dto = new FileDto(filePath, CollectionUtils.get(tmpMetadata.getIdentifiers(), 0).toString(), options.getFileFormat());
         for (String url : tmpMetadata.getLocations()) {
             try {
                 if (!url.startsWith("http")) {
-                    throw new Exception("Protocol not supported : " + url);
+                    throw new ProtocolNotSupportedException("Protocol not supported : " + url);
                 }
 
                 URL u = new URL(url);
                 if (!u.getProtocol().equals("http")) {
-                    throw new Exception("Protocol not supported : " + url);
+                    throw new ProtocolNotSupportedException("Protocol not supported : " + url);
                 }
                 dto.addLocation(new UrlDto(u.getHost(), url));
-            } catch (Exception e) {
-                log.debug("Malformed URL {} in file with id : {}", url, dto.getIdentifier());
+            } catch (MalformedURLException e) {
+                LOG.debug("Malformed URL {} in file with id : {}", url, dto.getIdentifier());
                 dto.addLocation(new UrlDto(null, url, Family.OTHER, -1));
                 dto.setContainsError(true);
             }
@@ -69,30 +73,31 @@ public class FileProcessorService {
     }
 
     public void copyFile(String filePath, LinkCheckerOptions options, boolean success) {
-        log.trace("Ready to move file {} to {} folder.", filePath, success ? "success" : "error");
+        LOG.trace("Ready to move file {} to {} folder.", filePath, success ? "success" : "error");
 
-        File rootFolder = new File(options.rootFolderPath);
-        File successFolder = new File(options.successFolderPath);
-        File errorFolder = new File(options.errorFolderPath);
+        File rootFolder = new File(options.getRootFolderPath());
+        File successFolder = new File(options.getSuccessFolderPath());
+        File errorFolder = new File(options.getErrorFolderPath());
 
         String targetFilePath = filePath.replace(rootFolder.getPath(), success ? successFolder.getPath() : errorFolder.getPath());
         try {
             FileUtils.copyFile(new File(filePath), new File(targetFilePath));
         } catch (Exception e) {
-            log.error("Error while moving {} to {}", new Object[] { filePath, targetFilePath }, e);
+            LOG.error("Error while moving {} to {}", new Object[] { filePath, targetFilePath }, e);
         }
     }
 
     @SuppressWarnings("unchecked")
-    public void updateFile(FileDto fileDto, LinkCheckerOptions options) throws Exception {
+    public void updateFile(FileDto fileDto, LinkCheckerOptions options) throws IOException {
         File file = new File(fileDto.getFilePath());
         String akifString = FileUtils.readFileToString(file);
         JSONObject akifObject = (JSONObject) JSONValue.parse(akifString);
         if (!fileDto.getIdentifier().equals(akifObject.get("identifier").toString())) {
-            throw new Exception("Identifiers mismatch!: " + fileDto.getIdentifier() + " differs from " + akifObject.get("identifier"));
+            throw new LinkCheckerException("Identifiers mismatch!: " + fileDto.getIdentifier() + " differs from " + akifObject.get("identifier"));
         }
         JSONArray expressions0 = (JSONArray) akifObject.get("expressions");
         JSONArray expressions1 = new JSONArray();
+        boolean fileChanged = false;
         for (Object expression : expressions0) {
             JSONObject expression0 = (JSONObject) expression;
             JSONArray manifestations0 = (JSONArray) expression0.get("manifestations");
@@ -104,9 +109,12 @@ public class FileProcessorService {
                 for (Object item : items0) {
                     JSONObject item0 = (JSONObject) item;
                     String url = (String) item0.get("url");
-                    // item0.put( "broken", new Boolean( true ) ) ;
-                    item0.put("broken", new Boolean(fileDto.isUrlBroken(url)));
-                    items1.add(item0);
+                    Boolean broken = (Boolean) item0.get("broken");  
+                    if(broken != fileDto.isUrlBroken(url)) {
+                        item0.put("broken", Boolean.valueOf(fileDto.isUrlBroken(url)));
+                        fileChanged = true;
+                        items1.add(item0);
+                    }
                 }
                 manifestation0.put("items", items1);
                 manifestations1.add(manifestation0);
@@ -115,8 +123,9 @@ public class FileProcessorService {
             expressions1.add(expression0);
         }
         akifObject.put("expressions", expressions1);
-        akifObject.put("lastUpdateDate", sdf.format(new Date(System.currentTimeMillis())));
-
-        FileUtils.writeStringToFile(file, akifObject.toJSONString());
+        if(fileChanged) {
+            akifObject.put("lastUpdateDate", sdf.format(new Date(System.currentTimeMillis())));
+            FileUtils.writeStringToFile(file, akifObject.toJSONString());
+        }
     }
 }
